<resources>
    <string name="app_name">TipSplit</string>
    <string name="bill_total_with_tax">Bill Total with Tax: </string>
    <string name="tip_percentage">Tip Percent:</string>
    <string name="_20">20%</string>
    <string name="_18">18%</string>
    <string name="_15">15%</string>
    <string name="_12">12%</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total with Tip:</string>
    <string name="overage">Overage:</string>
    <string name="total_per_person">Total per Person:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="go">Go</string>
    <string name="clear">CLEAR</string>
</resources>